Last fix in the main nb

--- a/tp_vqe.ipynb
+++ b/tp_vqe.ipynb
@@ -121,28 +121,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import itertools\n",
-    "# {(0, 1): 1, (1, 2): 2}\n",
-    "def energy(ham, basis_vector):\n",
-    "    total_energy = 0\n",
-    "    \n",
-    "    for qbit_pair in ham.keys():\n",
-    "        a, b = qbit_pair\n",
-    "        coeff = ham[qbit_pair]\n",
-    "        if basis_vector[a] != basis_vector[b]:\n",
-    "            total_energy -= coeff\n",
-    "        else:\n",
-    "            total_energy += coeff\n",
-    "    return total_energy\n",
-    "\n",
     "def exact_ground_energy(ham):\n",
-    "    nbqbits = max(max(k) for k in ham) + 1\n",
-    "    min_e = None\n",
-    "    for bitvect in itertools.product([0, 1], repeat=nbqbits):\n",
-    "        state_energy = energy(ham, bitvect)\n",
-    "        if min_e is None or min_e > state_energy:\n",
-    "            min_e = state_energy\n",
-    "    return min_e"
+    "    \"\"\" TODO \"\"\""
    ]
   },
   {
@@ -181,35 +161,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qat.core import Observable, Term\n",
     "\n",
     "\n",
     "def to_observable(ham):\n",
-    "    nbqbits = max(max(k) for k in ham) + 1\n",
-    "    # 1er methode\n",
-    "    return sum(\n",
-    "        ham[(a, b)] * Observable.sigma_z(a, nbqbits) * Observable.sigma_z(b, nbqbits)\n",
-    "        for a, b in ham.keys()\n",
-    "    )\n",
-    "\n",
-    "def to_observable(ham):\n",
-    "    nbqbits = max(max(k) for k in ham) + 1\n",
-    "    # 1.5er methode\n",
-    "    obs = 0\n",
-    "    for a, b in ham.keys():\n",
-    "        obs += ham[(a, b)] * Observable.sigma_z(a, nbqbits) * Observable.sigma_z(b, nbqbits)\n",
-    "    return obs\n",
-    "\n",
-    "def to_observable(ham):\n",
-    "    nbqbits = max(max(k) for k in ham) + 1\n",
-    "    # autre methode\n",
-    "    return Observable(\n",
-    "        nbqbits,\n",
-    "        pauli_terms=[\n",
-    "            Term(ham[(a, b)], \"ZZ\", [a, b])\n",
-    "            for a, b in ham.keys()\n",
-    "        ]\n",
-    "    )"
+    "    \"\"\"TODO\"\"\"\n"
    ]
   },
   {
@@ -264,23 +219,8 @@
    "source": [
     "from qat.lang.AQASM import *\n",
     "\n",
-    "def rzz_matrix(theta):  # we need to specify the corresponding matrix, so that the simulator can manage\n",
-    "    return np.diag([1, np.exp(1j * theta), np.exp(1j * theta), 1])\n",
-    "RZZ = AbstractGate(\"RZZ\", [float], arity=2, matrix_generator=rzz_matrix)\n",
-    "\n",
     "def first_family(nbqbits, depth):\n",
-    "    prog = Program()\n",
-    "    qbits = prog.qalloc(nbqbits)\n",
-    "    for qbit in qbits:\n",
-    "        H(qbit)\n",
-    "    for d in range(depth):\n",
-    "        a_i = prog.new_var(float, \"a_\"+str(d))\n",
-    "        for i in range(nbqbits - 1):\n",
-    "            prog.apply(RZZ(a_i), qbits[i], qbits[i+1])\n",
-    "        b_i = prog.new_var(float, \"b_\"+str(d))\n",
-    "        for qbit in qbits:\n",
-    "            RX(b_i)(qbit)\n",
-    "    return prog.to_circ()"
+    "    \"\"\"TODO\"\"\""
    ]
   },
   {
@@ -329,31 +269,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Using a variational plugin\n",
-    "from qat.qpus import get_default_qpu\n",
-    "from qat.plugins import ScipyMinimizePlugin\n",
-    "\n",
-    "minimize_arguments = { \n",
-    "    \"method\": \"COBYLA\",\n",
-    "    \"tol\": 1e-4,\n",
-    "    \"options\":{\"maxiter\": 600}\n",
-    "}\n",
-    "STACK = ScipyMinimizePlugin(**minimize_arguments) | get_default_qpu()\n",
-    "RETRIES = 20\n",
     "\n",
     "def approximate_ground_state(ham, depth):\n",
-    "    nbqbits = max(max(k) for k in ham) + 1\n",
-    "    circuit = first_family(nbqbits, depth)\n",
-    "    obs = to_observable(ham)\n",
-    "    \n",
-    "    job = circuit.to_job(observable=obs)\n",
-    "    values = []\n",
-    "    for _ in range(RETRIES):\n",
-    "        result = STACK.submit(job)\n",
-    "        value = result.value\n",
-    "        print(result.meta_data[\"optimizer_data\"])\n",
-    "        values.append(value)\n",
-    "    return min(values)"
+    "    \"\"\" TODO \"\"\""
    ]
   },
   {
